--- a/api/.env.example
+++ b/api/.env.example
@@ -1,6 +1,6 @@
 FRONTEND_URL=http://localhost:5173
 PORT=3000
-MONGODB_CONN=""
+MONGODB_CONN="mongodb+srv://kushagrayadav0305:RSS66fuuURhKLX0E@cluster12.9s1fmov.mongodb.net/?retryWrites=true&w=majority&appName=Cluster12"
 JWT_SECRET="ljlkjsdfjdslkfjdslkfjsd"
 NODE_ENV="development"
 CLOUDINARY_APP_NAME=""
